Prevent flicker from login state transitions

--- a/public/styles/main.less
+++ b/public/styles/main.less
@@ -35,3 +35,8 @@
 .nav, .pagination, .carousel, .panel-title a {
   cursor: pointer;
 }
+
+// se we don't have to load angular.js in head
+[ng\:cloak], [ng-cloak], [data-ng-cloak], [x-ng-cloak], .ng-cloak, .x-ng-cloak {
+  display: none !important;
+}
